@@ -1,5 +1,6 @@
 Current
 -------
+ -Fixed #28600 - Select only required fields from a Expanded Entity using OData Service
 - Fixed #28507 - Change web.xml to give a default version without CORS configuration
 - Fixed #28595 - 'eq' and 'ne' functions are not working when the variable name contains 'eq' or 'ne' respectively
 
